# CoopYourself

./: Readme.md
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/.externalNativeBuild.old/cmake/debug/arm64-v8a/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/debug/armeabi/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/debug/armeabi-v7a/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/debug/mips/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/debug/mips64/: .ninja_deps  .ninja_log  android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/debug/x86/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/debug/x86_64/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/release/arm64-v8a/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/release/armeabi/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/release/armeabi-v7a/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/release/mips/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/release/mips64/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/release/x86/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/.externalNativeBuild.old/cmake/release/x86_64/: android_gradle_build.json  build.ninja  cmake_build_command.txt  cmake_build_output.txt  rules.ninja
app/src/androidTest/java/com/lostwatchtheatre/coopyourself/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CImg.h  NativeImageBuffer.cpp  NativeImageBuffer.h  handle.h  native-lib.cpp
app/src/main/cpp/events/: SetBackgroundEvent.cpp  SetBackgroundEvent.h  SetDisplaySizeEvent.cpp  SetDisplaySizeEvent.h
app/src/main/cpp/renderlib/: Dots.cpp  Dots.h  ImageBuffer.h  RenderService.cpp  RenderService.h
app/src/main/java/com/lostwatchtheatre/coopyourself/: AboutActivity.java  BeginActivity.java  CanvasView.java  CoopActivity.java  DiskImageBuffer.java  FileUtility.java  ImageBuffer.java  RenderService.java  ShareActivity.java  WelcomeActivity.java
app/src/main/java/com/lostwatchtheatre/coopyourself/lib/: CircleArea.java  (+5 more)
app/src/main/res/layout/: about_layout.xml  begin_layout.xml  coop_layout.xml  share_layout.xml  welcome_layout.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/lostwatchtheatre/coopyourself/: ExampleUnitTest.java
(+3 files in other folders)
